# templates

./: README.md  install.sh
common/: .editorconfig
common/clang-format/: .clang-format  test.cpp
common/clang-tidy/: .clang-tidy
cpp_common/: .gitignore  Makefile  README.md  first_time_init.sh
cpp_hello_world/: .editorconfig  CMakePresets.json  README.md
cpp_hello_world/src/: main.cpp
cpp_plain_hello_world/: CMakePresets.json  Makefile  first_time_init.sh
cpp_vcpkg_hello_world/: .clang-format  .gitignore  CMakeLists.txt  vcpkg.json
cpp_vcpkg_opengl_hello_triangle/: CMakeLists.txt  CMakePresets.json  first_time_init.sh  vcpkg.json
cpp_vcpkg_opengl_hello_triangle/src/: main.cpp  pch.h
res/: .clang-format  README.md
